--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
 </head>
@@ -53,8 +55,8 @@
             </p>
 
             <div class="hero-buttons">
-                <a href="#" class="btn primary">Start Building Your Vault </a>
-                <a href="#" class="btn outline"> See How It Works</a>
+                <a href="#" class="btn primary" >Start Building Your Vault <i class="fa-solid fa-arrow-right-long"></i></a>
+                <a href="#" class="btn outline"> See How It Works <i class="fa-solid fa-play"></i></a>
             </div>
         </div>
     </section>
@@ -154,7 +156,7 @@
                 Start free, no credit card required.
             </p>
 
-            <a href="#" class="cta-btn">Get Early Access →</a>
+            <a href="#" class="cta-btn">Get Early Access <i class="fa-solid fa-arrow-right-long"></i></a>
 
             <p class="cta-note">
                 Free during early access • No credit card needed
@@ -189,7 +191,7 @@
 
 
         <div class="footer-bottom">
-            © 2026 Personal Knowledge Vault. All rights reserved.
+            © prottoy All rights reserved.
         </div>
     </footer>
 
