--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <div class="footer-top">
 
             <div class="footer-brand">
-                <img src="/logo/logo-navbar.png" alt="KV Logo" class="logo-img">
+                <img src="./logo/logo-navbar.png" alt="" class="logo-img">
                 <small>Knowledge Vault</small>
             </div>
 
