--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
 
         <div class="footer-bottom">
-            © prottoy All rights reserved.
+           <P> © 2026 Personal Knowledge Vault. All rights reserved.</P>
         </div>
     </footer>
 
@@ -208,5 +208,3 @@
 
 
 <!-- আমি কিছু জায়গায় ফ্রেন্ডের কাছ থেকে হেল্প নিয়েছি -->
-<!-- আমি কিছু জায়গায় ফ্রেন্ডের কাছ থেকে হেল্প নিয়েছি -->
-<!-- আমি কিছু জায়গায় ফ্রেন্ডের কাছ থেকে হেল্প নিয়েছি
